# file_copies_finder

./: CMakeLists.txt  finder.cpp  finder.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
tests/: CMakeLists.txt  main.cpp  tst_finder.h
